# drop

./: .gitignore  CMakeLists.txt  LICENSE  README.md
include/drop/: options.h  tftp.h
lib/: CMakeLists.txt  options.c  tftp.c
src/: CMakeLists.txt  client.c  daemon.c
